2000-12-20  Gary Houston  <ghouston@arglist.com>

	* continuations.c (continuation_apply): subtract the length of
	continuation->dynenv, not the dynenv itself.  I broke it last
	time I changed this file.  thanks to Bernard Urban.

2000-12-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* goops.c (remove_duplicate_slots, maplist,
	scm_sys_initialize_object, scm_sys_prep_layout_x,
	scm_sys_inherit_magic_x, scm_instance_p,
	scm_sys_set_object_setter_x, scm_sys_invalidate_method_cache_x,
	scm_compute_applicable_methods, scm_m_atdispatch,
	scm_pure_generic_p):  Remove redundant SCM_N?IMP tests.

2000-12-16  Keisuke Nishida  <kxn30@po.cwru.edu>

	* validate.h (SCM_WRONG_NUM_ARGS): New macro.
	* goops.h: #include "libguile/validate.h"
	(SCM_CLASSP, SCM_GENERICP, SCM_METHODP): Moved from goops.c with
	prefix "SCM_".
	(SCM_VALIDATE_INSTANCE, SCM_VALIDATE_ACCESSOR, SCM_VALIDATE_CLASS,
	SCM_VALIDATE_GENERIC, SCM_VALIDATE_METHOD): New macros.
	* goops.c (CLASSP, GENERICP, METHODP): Moved to goops.h with
	prefix "SCM_".
	(scm_sys_compute_slots, scm_sys_initialize_object,
	scm_sys_prep_layout_x, s_sys_inherit_magic_x, scm_instance_p,
	scm_class_name, scm_class_direct_supers, scm_class_direct_slots,
	scm_class_direct_subclasses, scm_class_direct_methods,
	scm_class_precedence_list, scm_class_slots, scm_class_environment,
	scm_generic_function_name, scm_generic_function_methods,
	scm_method_generic_function, scm_method_specializers,
	scm_method_procedure, scm_accessor_method_slot_definition,
	scm_make_unbound, scm_unbound_p, scm_assert_bound,
	scm_at_assert_bound_ref, scm_sys_fast_slot_ref,
	scm_sys_fast_slot_set_x, scm_slot_ref_using_class,
	scm_slot_set_using_class_x, scm_slot_bound_using_class_p,
	scm_slot_exists_using_class_p, scm_slot_ref, scm_slot_set_x,
	scm_slot_bound_p, scm_slots_exists_p, scm_sys_allocate_instance,
	scm_sys_set_object_setter_x, scm_sys_modify_instance,
	scm_sys_modify_class, scm_sys_invalidate_class,